[package]
name = "git-ac"
version = "0.1.0"
edition = "2021"
description = "A simple CLI for quickly making standardized commits."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/AirOne01/ac"
repository = "https://github.com/AirOne01/ac"


[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
clap_complete = "4.4.4"
colored = "2.0.4"
git2 = "0.18.1"
inquire = "0.6.2"
